# pynidus

./: .gitignore  README.md  debug.txt  debug_ids_test.txt  pyproject.toml  pytest_output.txt  read_db_error.py  read_log.py  test.db  test_output.txt
.github/workflows/: python-package.yml
docs/: configuration.md  core.md  database.md  index.md  microservices.md  security.md
example/basic/: main.py
examples/library_app/: app.py  main.py  test_app.py
examples/library_app/books/: controller.py  module.py  schemas.py  service.py
src/pynidus/: __init__.py  verify_config.py
src/pynidus/cli/: main.py
src/pynidus/cli/commands/: generate.py  new.py
src/pynidus/common/decorators/: controller.py  http.py  injectable.py  security.py  transactional.py
src/pynidus/core/: config.py  container.py  factory.py  module.py  security.py
src/pynidus/db/: __init__.py  dependencies.py  session.py  sync_session.py  transaction_manager.py
src/pynidus/microservices/: __init__.py  decorators.py  listener.py
src/pynidus/microservices/transport/: base.py  memory.py  rabbitmq.py  zeromq.py
src/pynidus/tram/: __init__.py  client.py  models.py  relay.py
tests/: conftest.py  test_config.py  test_db_async.py  test_db_sync.py  test_db_transactional.py  test_decorators.py  test_di.py  test_factory.py  test_idempotency.py  test_integration.py  test_jwt_validation.py  test_microservices_di.py  test_oauth2_security.py  test_pre_authorize.py  test_rest_security.py  test_server_config.py  test_tram_integration.py  test_transactional.py  test_transport_rabbitmq.py  test_transport_zeromq.py
