[project]
name = "pynidus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Laurent Boucher", email = "lrb@civadis.be" }
]
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.8",
    "aiosqlite>=0.21.0",
    "fastapi>=0.122.0",
    "pyzmq>=27.1.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
